--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "testEnvironment": "jsdom",
     "transform": {},
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tests/fileMock.js"
+      "\\.(png|svg|jpg|jpeg|gif)$": "<rootDir>/tests/fileMock.js"
     }
   }
 }
