--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lit": "^2.4.1"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "webpack": "^5.75.0",
@@ -52,4 +53,3 @@
     }
   }
 }
-
