--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lovelace-gazpar-card",
-  "version": "1.3.9-alpha.2",
-  "compatibleIntegrationVersion": "1.3.4a5",
+  "version": "1.3.9",
+  "compatibleIntegrationVersion": "1.3.4",
   "description": "GrDF Gazpar meter lovelace card for Home Assistant.",
   "main": "index.js",
   "type": "module",
